@@ -1,3 +1,14 @@
+2009-07-30  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Tor Arne Vestbø.
+
+        [Qt] Initialize HTML5 Application Cache for QtWebKit to a sensible default
+        https://bugs.webkit.org/show_bug.cgi?id=27866
+
+        * Api/qwebpage.cpp:
+        (initializeApplicationCachePathIfNecessary):
+        (QWebPagePrivate::QWebPagePrivate):
+
 2009-07-31  Jakob Petsovits  <jakob.petsovits@torchmobile.com>
 
         Reviewed by Adam Treat.
